<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_right"
    android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back1"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_height="250dp"
                android:src="@mipmap/bg_add" />

            <ImageView
                android:id="@+id/icon_add1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:src="@mipmap/icon_add" />
            <ImageView
                android:id="@+id/icon_arrow1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="150dp"
                android:layout_toRightOf="@id/icon_add1"
                android:src="@mipmap/icon_arrow" />
            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="15dp"
                android:layout_below="@id/icon_add1"
                android:text="@string/add_fingerprint" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/back2"
                android:layout_width="100dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/bg_add" />
            <ImageView
                android:id="@+id/icon_add2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="70dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon_add" />
            <ImageView
                android:id="@+id/icon_arrow2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="150dp"
                android:layout_toRightOf="@id/icon_add2"
                android:src="@mipmap/icon_arrow" />
            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_add2"
                android:textSize="15dp"
                android:gravity="center_horizontal"
                android:text="@string/add_face" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:text="@string/name" />
            <TextView
                android:id="@+id/fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:text="@string/fingerprint" />
            <TextView
                android:id="@+id/face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"

                android:textColor="@color/white"
                android:text="@string/face" />
            <TextView
                android:id="@+id/correlation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"

                android:textColor="@color/white"
                android:text="@string/correlation" />
        </LinearLayout>

</LinearLayout>